<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="32dp">

    <ImageView
        android:id="@+id/iv_icon_close"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_avatar"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:background="@drawable/bg_grey_round16"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        app:shapeAppearanceOverlay="@style/RoundedImage"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/iv_icon_close" />

    <LinearLayout
        android:id="@+id/layout_user_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_avatar"
        app:layout_constraintTop_toTopOf="@+id/iv_avatar">

        <TextView
            android:id="@+id/tv_username"
            style="@style/ContentLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/placeholder_nama" />

        <LinearLayout
            android:id="@+id/layout_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_grey_round4">

            <TextView
                android:id="@+id/tv_tag"
                style="@style/ContentSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="2dp"
                android:textColor="@color/content_light_secondary"
                android:text="@string/placeholder_family_role"
                app:layout_constraintEnd_toEndOf="parent" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_divider_family_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/iv_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        android:gravity="center">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TitleMedium"
            android:text="@string/informasi_keluarga"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            style="@style/HorizontalDivider"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_father_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_divider_family_info"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ContentSmallSemiBold"
            android:layout_weight="1"
            android:text="@string/ayah"/>

        <TextView
            android:id="@+id/tv_ayah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ContentSmall"
            android:text="@string/placeholder_nama"
            android:layout_weight="1"
            android:textAlignment="textEnd"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_mother_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_father_info"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ContentSmallSemiBold"
            android:layout_weight="1"
            android:text="@string/ibu"/>

        <TextView
            android:id="@+id/tv_ibu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ContentSmall"
            android:text="@string/placeholder_nama"
            android:layout_weight="1"
            android:textAlignment="textEnd"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_user_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_mother_info"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ContentSmallSemiBold"
            android:layout_weight="1"
            android:text="@string/status"/>

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ContentSmall"
            android:text="@string/status_hidup"
            android:layout_weight="1"
            android:textAlignment="textEnd"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_divider_other_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/layout_user_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        android:gravity="center">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TitleMedium"
            android:text="@string/informasi_lainnya"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            style="@style/HorizontalDivider"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_divider_other_info"
        android:orientation="horizontal"
        android:gravity="center">
        
        <ImageView
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:src="@drawable/icon_phone"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ContentSmallSemiBold"
            android:layout_weight="1"
            android:text="@string/nomor_telepon"/>

        <TextView
            android:id="@+id/tv_nomor_telepon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ContentSmall"
            android:text="081232423342"
            android:layout_weight="1"
            android:textAlignment="textEnd"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_born_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_phone_number"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:src="@drawable/icon_calendar"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ContentSmallSemiBold"
            android:layout_weight="1"
            android:text="@string/tanggal_lahir"/>

        <TextView
            android:id="@+id/tv_tanggal_lahir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ContentSmall"
            android:text="12 Januari 1920"
            android:layout_weight="1"
            android:textAlignment="textEnd"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_died_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_born_date"
        android:orientation="horizontal"
        android:visibility="gone"
        android:gravity="center">

        <ImageView
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:src="@drawable/icon_calendar"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ContentSmallSemiBold"
            android:layout_weight="1"
            android:text="@string/meninggal"/>

        <TextView
            android:id="@+id/tv_tanggal_meninggal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ContentSmall"
            android:text="12 Januari 1990"
            android:layout_weight="1"
            android:textAlignment="textEnd"/>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_contact_whatsapp"
        style="@style/Widget.Material3.Button"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:text="@string/hubungi_whatsapp"
        android:fontFamily="@font/plus_jakarta_sans_semi_bold"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        app:icon="@drawable/whatsapp"
        app:iconGravity="textStart"
        android:textSize="16sp"
        android:insetBottom="0dp"
        android:insetTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_died_date"/>


</androidx.constraintlayout.widget.ConstraintLayout>