<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.family.DetailFamilyActivity">

    <ImageView
        android:id="@+id/iv_family_photo"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:clipToOutline="true"
        android:scaleType="fitXY"
        android:src="@drawable/img_placeholder_family"/>

    <LinearLayout
        android:id="@+id/layout_back"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/bg_white_circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/arrow_left" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_family_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="194dp"
        app:layout_constraintTop_toTopOf="@id/iv_family_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_white_outlined_round16">

        <TextView
            android:id="@+id/tv_family_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/placeholder_family_name"
            android:layout_marginTop="12dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            style="@style/HeadingH3"
            android:textAlignment="center"/>

        <LinearLayout
            android:id="@+id/layout_family_member"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/line_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_family_name">

            <ImageView
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:src="@drawable/icon_family_member" />

            <TextView
                style="@style/TitleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jumlah_anggota"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tv_family_member"
                style="@style/ContentSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:textColor="@color/content_light_secondary"
                android:text="2 Anggota"
                android:textAlignment="center" />
        </LinearLayout>

        <View
            android:id="@+id/line_vertical"
            style="@style/VerticalDivider"
            android:layout_height="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_family_name" />

        <LinearLayout
            android:id="@+id/layout_family_domicile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="4dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/line_vertical"
            app:layout_constraintTop_toBottomOf="@id/tv_family_name">

            <ImageView
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:src="@drawable/icon_family_domicile" />

            <TextView
                style="@style/TitleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/domisili_keluarga"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tv_family_domicile"
                style="@style/ContentSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:textColor="@color/content_light_secondary"
                android:text="Sidoarjo"
                android:textAlignment="center" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/heading_family_member"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layout_family_desc"
        style="@style/HeadingH2"
        android:text="@string/anggota_keluarga"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_family_member"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/heading_family_member"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>